Edited link for resume

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 							<ul>
 								<li><a href="https://www.linkedin.com/in/iamvibhorsingh/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
 								<li><a href="#https://github.com/iamvibhorsingh" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://file.town/download/9zd86vkgqw100zva34gsx4t27" class="fas fa-file-pdf"><span class="label">Resume</span></a></li>
-								<li><a href="mailto:vibhorsingh@nyu.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								<li><a href="https://www.instagram.com/i.am.vibhorsingh/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="http://dl.dropboxusercontent.com/s/zlbtj7on2fljq07/Vibhor%20Singh%20Summer%202020.pdf?dl=0" class="fas fa-file-pdf"><span class="label">Resume</span></a></li>
+								<li><a href="mailto:vs2318@nyu.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 			</div>
