--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Vibhor Singh</h1>
-						<h3> &nbsp;&bull;&nbsp; Master's Student @ NYU &nbsp;&bull;&nbsp; Aspiring Data Scientist</h3>
+						<h3><b> &nbsp;&bull;&nbsp; Graduate Student @NYU &nbsp;&bull;&nbsp; Aspiring Data Pro </b></h3>
 						<nav>
 							<ul>
 								<li><a href="https://www.linkedin.com/in/iamvibhorsingh/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
