Icon for portfolio

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Vibhor Singh</h1>
-						<h3><b> &nbsp;&bull;&nbsp; Graduate Student @NYU &nbsp;&bull;&nbsp; Aspiring Data Pro </b></h3>
+						<h3> &nbsp;&bull;&nbsp; Graduate Student @NYU &nbsp;&bull;&nbsp; Aspiring Data Pro </h3>
 						<nav>
 							<ul>
 								<li><a href="https://www.linkedin.com/in/iamvibhorsingh/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
 								<li><a href="#https://github.com/iamvibhorsingh" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="http://dl.dropboxusercontent.com/s/zlbtj7on2fljq07/Vibhor%20Singh%20Summer%202020.pdf?dl=0" class="fas fa-file-pdf"><span class="label">Resume</span></a></li>
 								<li><a href="mailto:vs2318@nyu.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="" class="fas fa-chart-pie"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 			</div>
