Added link for portfolio

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 								<li><a href="#https://github.com/iamvibhorsingh" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="http://dl.dropboxusercontent.com/s/zlbtj7on2fljq07/Vibhor%20Singh%20Summer%202020.pdf?dl=0" class="fas fa-file-pdf"><span class="label">Resume</span></a></li>
 								<li><a href="mailto:vs2318@nyu.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								<li><a href="" class="fas fa-chart-pie"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/iamvibhorsingh/Visualization-Portfolio/tree/master/Geographical/Visualization%201" class="fas fa-chart-pie"><span class="label">Portfolio</span></a></li>
 							</ul>
 						</nav>
 			</div>
