--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
                 <div><i class="fas fa-circle"></i>&nbsp;Splunk</div>
             </div>
             <!--<button onclick="location.href='https://iamvibhorsingh.github.io/portfolio/'"></button> -->
-            <button class="btn_one">My portfolio (currently working on it)</button>
-            <button class="btn_two">Random photos I click</button>
+            <button class="btn_two">My portfolio (currently working on it)</button>
         </section>
     </div>
     <div id="about_container" class="container">
