added portfolio link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div><i class="fas fa-circle"></i>&nbsp;Postgres</div>
                 <div><i class="fas fa-circle"></i>&nbsp;Splunk</div>
             </div>
-            <button onclick="location.href='iamvibhorsingh.github.io/blob/master/portfolio/index.html'"></button>
+            <button onclick="location.href='https://iamvibhorsingh.github.io/portfolio/index.html';"></button>
             <button class="btn_two">My portfolio (currently working on it)</button>
         </section>
     </div>
