--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
                 <div><i class="fas fa-circle"></i>&nbsp;Postgres</div>
                 <div><i class="fas fa-circle"></i>&nbsp;Splunk</div>
             </div>
-            <button onclick="location.href='https://iamvibhorsingh.github.io/portfolio/index.html';"></button>
-            <button class="btn_two">My portfolio (currently working on it)</button>
+            <button class="btn_two" onclick="location.href='https://iamvibhorsingh.github.io/portfolio/index.html';">My portfolio (currently working on it)</button>
         </section>
     </div>
     <div id="about_container" class="container">
