--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -110,7 +110,7 @@
                     <div class="blog-post-thumb">
                          <div class="blog-post-video">
                               <div class="embed-responsive embed-responsive-16by9">
-                                   <iframe class="embed-responsive-item" src="https://github.com/iamvibhorsingh/iamvibhorsingh.github.io/blob/master/portfolio/2_3/visualization.mp4" allowfullscreen></iframe>
+                                   <iframe class="embed-responsive-item" src="https://raw.githubusercontent.com/iamvibhorsingh/iamvibhorsingh.github.io/master/portfolio/2_3/visualization.mp4" allowfullscreen></iframe>
                               </div>
                          </div>
                          <div class="blog-post-title">
