Added link to portfolio

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <table>
                 <tr>
                     <td class="animated zoomIn" style="animation-delay:2.2s;"><a href="http://dl.dropboxusercontent.com/s/zlbtj7on2fljq07/Vibhor%20Singh%20Summer%202020.pdf?dl=0" class="social"><i class="fa fa-file"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"><i class="fa fa-chart-pie"></i></a></td>
+                    <td class="animated zoomIn" style="animation-delay:2.4s;"><a href="https://iamvibhorsingh.github.io/portfolio/" class="social"><i class="fa fa-chart-pie"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.6s;"><a href="https://github.com/iamvibhorsingh" class="social"><i class="fab fa-github"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.8s;"><a href="https://www.linkedin.com/in/iamvibhorsingh/" class="social"><i class="fab fa-linkedin"></i></a></td>
                 </tr>
