--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,7 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                </button>
-               <a href="index.html" class="navbar-brand">Vibhor Singh</a>
+               <a href="https://iamvibhorsingh.github.io" class="navbar-brand">Vibhor Singh</a>
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
