--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,7 +57,7 @@
      <div class="container">
           <div class="row">
                <div class="col-md-12 col-sm-12">
-                    <h1>Hello! This is my Portfolio.</h1>
+                    <h1>Hello! This is my Portfolio. It's still under construction.</h1>
                </div>
           </div>
      </div>
