--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -84,7 +84,7 @@
                          </div>
                          <div class="blog-post-des">
                               <p>Will contain all spatial viz.</p>
-                              <a href="index.html" class="btn btn-default">Continue Reading</a>
+                              <a href="1_3\index.html" class="btn btn-default">Continue Reading</a>
                          </div>
                     </div>
 
@@ -103,7 +103,7 @@
                          </div>
                          <div class="blog-post-des">
                               <p>Will contain all network related viz.</p>
-                              <a href="index.html" class="btn btn-default">Continue Reading</a>
+                              <a href="3_2\index.html" class="btn btn-default">Continue Reading</a>
                          </div>
                     </div>
 
@@ -122,7 +122,7 @@
                          </div>
                          <div class="blog-post-des">
                               <p>Will contain all time related viz.</p>
-                              <a href="index.html" class="btn btn-default">Continue Reading</a>
+                              <a href="2_3\index.html" class="btn btn-default">Continue Reading</a>
                          </div>
                     </div>
                     </div>
