--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -103,7 +103,7 @@
                          </div>
                          <div class="blog-post-des">
                               <p>Will contain all network related viz.</p>
-                              <a href="3_2\index.html" class="btn btn-default">Continue Reading</a>
+                              <a href="3_2\sankey.html" class="btn btn-default">Continue Reading</a>
                          </div>
                     </div>
 
