--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -121,7 +121,9 @@
                               <span><i class="fa fa-date"></i> April 10, 2020</span>
                          </div>
                          <div class="blog-post-des">
-                              <p>Will contain all time related viz.</p>
+                              <p>Will contain all time related viz. The animation is currently broken due to 
+                              some functions being outdated due to the newer version of d3. Refer to video
+                              to see how it works.</p>
                               <a href="2_3\index.html" class="btn btn-default">Continue Reading</a>
                          </div>
                     </div>
