--- a/portfolio/3_2/sankey.html
+++ b/portfolio/3_2/sankey.html
@@ -45,7 +45,8 @@
   </head>
   <body>
       <h1>Visualization 2</h1>
-    <h2>Relationship between countries in terms of top 5 purposes of donations. Please do take a look at supplementary visualiztion by using localhost:8000/whotowho.html</h2>
+    <h2>Relationship between countries in terms of top 5 purposes of donations. Please do take a look at supplementary visualiztion by clicking </h2> 
+    <a href="whotowho.html" class="btn btn-default">here</a>
     <div id="chart"></div>
       <p>
 	  <i>*CSV files included in the directory were used to make json data by hand.</i>
