--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -76,7 +76,7 @@
                               </a>
                          </div>
                          <div class="blog-post-title">
-                              <h3><a href="index.html">Geospatial Visualizations</a></h3>
+                              <h3><a href="1_3\index.html">Geospatial Visualizations</a></h3>
                          </div>
                          <div class="blog-post-format">
                               <span><a href="#"><img src="images/author.jpeg" class="img-responsive img-circle"> Vibhor Singh</a></span>
@@ -95,7 +95,7 @@
                               </a>
                          </div>
                          <div class="blog-post-title">
-                              <h3><a href="index.html">Network Visualizations</a></h3>
+                              <h3><a href="3_2\sankey.html">Network Visualizations</a></h3>
                          </div>
                          <div class="blog-post-format">
                               <span><a href="#"><img src="images/author.jpeg" class="img-responsive img-circle"> Vibhor Singh</a></span>
@@ -114,7 +114,7 @@
                               </div>
                          </div>
                          <div class="blog-post-title">
-                              <h3><a href="index.html">Temporal Visualizations</a></h3>
+                              <h3><a href="2_3\index.html">Temporal Visualizations</a></h3>
                          </div>
                          <div class="blog-post-format">
                               <span><a href="#"><img src="images/author.jpeg" class="img-responsive img-circle"> Vibhor Singh</a></span>
