--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <section>
                 <h2>about me</h2>
                 <p>
-                    I am currently doing my Master's in Computer Science from NYU. In my free time, I love to play CSGO, watch matches of Chelsea FC and click photographs. I also like to keep on top of any and all breaches, hacks, data dumps and new vulnerabilities specially targetting windows OS.
+                    I am currently working as a software developer at Fastenal. In my free time, I love to play CSGO, watch matches of Chelsea FC and do photography. I also like to keep on top of any and all breaches, hacks, data dumps and new vulnerabilities specially targetting windows OS.
                 </p>
             </section>
             <section>
@@ -92,9 +92,9 @@
                     DISCLAIMER : Lists below will keep growing so make sure to revisit!
                 </p>
                 <p>
-                    Code: <b>[ Python, d3.js, Javascript, HTML, CSS, SQL, C++, Shell scripting ]</b>
+                    Code: <b>[ Python, Java, d3.js, Javascript, HTML, CSS, KSQL, SQL, C++, Shell scripting ]</b>
                     <br> <br>
-                    Tools and Tech: <b>[ AWS, Matplotlib, Numpy, OpenCV, Pandas, Pytorch, Sci-kit, Scipy, ServiceNow, SparkML, Splunk, Tableau, Tensorflow ]</b>
+                    Tools and Tech: <b>[ Kafka, Kafka Streams, AWS, Matplotlib, Numpy, OpenCV, Pandas, Pytorch, Sci-kit, Scipy, ServiceNow, SparkML, Splunk, Tableau, Tensorflow ]</b>
                 </p>
             </section>
         </div>
