--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <table>
                 <tr>
-                    <td class="animated zoomIn" style="animation-delay:2.2s;"><a href="https://www.dropbox.com/s/dhe0xkl5thnb7qj/Vibhor_Singh_Resume.pdf?dl=0" class="social"><i class="fa fa-file"></i></a></td>
+                    <td class="animated zoomIn" style="animation-delay:2.2s;"><a href="https://iamvibhorsingh.github.io/portfolio/resume/Vibhor_Singh_Resume.pdf" class="social"><i class="fa fa-file"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.4s;"><a href="https://iamvibhorsingh.github.io/portfolio/" class="social"><i class="fa fa-chart-pie"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.6s;"><a href="https://github.com/iamvibhorsingh" class="social"><i class="fab fa-github"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.8s;"><a href="https://www.linkedin.com/in/iamvibhorsingh/" class="social"><i class="fab fa-linkedin"></i></a></td>
