--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
                 <i class="fas fa-bars"></i>
             </div>
             <ul class="nav-menu">
-                <li><a href="#" onclick="showHome()">Home</a></li>
-                <li><a href="#" onclick="showabout()">About</a></li>
-                <li><a href="#" onclick="showwork()">Projects</a></li>
-                <li><a href="#" onclick="showExperience()">Experience</a></li>
-                <li><a href="#" onclick="showcontact()">Contact</a></li>
+                <li><a onclick="showabout()">About</a></li>
+                <li><a onclick="showwork()">Projects</a></li>
+                <li><a onclick="showcontact()">Contact</a></li>
             </ul>
         </div>
     </nav>
