--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <div><i class="fas fa-circle"></i>&nbsp;Splunk</div>
             </div>
             <button class="btn_two" onclick="location.href='https://iamvibhorsingh.github.io/portfolio/index.html';">My portfolio (currently working on it)</button>
+            <button class="btn_two" onclick="location.href='https://iamvibhorsingh.github.io/bboxfinder/index.html';">Modernized version of bboxfinder.com</button>
         </section>
     </div>
     <div id="about_container" class="container">
