--- a/boundingbox/index.html
+++ b/boundingbox/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <title>Improved Bounding Box maker</title>
+    <title>Powerful Bounding Box maker</title>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
