--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -67,7 +67,7 @@
     <p>If we update the extension in a way that changes how your data is handled, we will update this policy accordingly.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have any questions about this privacy policy, please contact us at: vibhorsingh@nyu.edu</p>
+    <p>If you have any questions about this privacy policy, please contact us at: contact@vibhorsingh.com</p>
   </div>
 </body>
 </html> 
