--- a/boundingbox/index.html
+++ b/boundingbox/index.html
@@ -71,7 +71,7 @@
     <!-- Simple left sidebar for help -->
     <div id="lsidebar" class="simple-sidebar left-sidebar" style="display: none;">
         <div class="sidebar-header">
-            <h3>Help</h3>
+            <h3>Help - for support contact boundingbox@vibhorsingh.com</h3>
             <button class="close-btn" onclick="$('#help button').click()">×</button>
         </div>
         <div class="sidebar-content">
