--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
             <section>
                 <h2>contact me</h2>
                 <p>
-                    Email: vibhorsingh@nyu.edu
+                    Email: contact@vibhorsingh.com
                     <!--<form>
-                        <input type="text" placeholder="Vibhor" required>
-                        <input type="email" placeholder="vs2318@nyu.edu" required><br>
-                        <textarea placeholder="your message" required rows="2"></textarea><br>
+                        <input type="text" placeholder="Vibhor Singh" required>
+                        <input type="email" placeholder="contact@vibhorsingh.com" required><br>
+                        <textarea placeholder="Enter your message" required rows="2"></textarea><br>
                         <button class="btn_one">send</button>
                     </form>--> 
                 </p>
