add screenshot functionality

--- a/boundingbox/index.html
+++ b/boundingbox/index.html
@@ -29,6 +29,7 @@
     
     <!-- Load custom scripts last -->
     <script src="js/maps/wkt.parser.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="js/bbox.js"></script>
    
 </head>
@@ -149,6 +150,7 @@
                     <button class="btn_one" id="copy-wkt">Copy WKT</button>
                     <button class="btn_one" id="copy-geojson-bbox">Copy GeoJSON BBox</button>
                     <button class="btn_one" id="copy-leaflet-array">Copy Leaflet Array</button>
+                    <button class="btn_one" id="download-png" style="display: none;">Download as PNG</button>
                 </div>
             </div>
         </div>
