add blog post about browser extension

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -71,6 +71,25 @@
                <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <div class="blog-post-thumb">
                          <div class="blog-post-image">
+                              <a href="4_1/index.html">
+                                   <img src="images/lookstuffup.png" class="img-responsive" alt="LookStuffUp Blog Image">
+                              </a>
+                         </div>
+                         <div class="blog-post-title">
+                              <h3><a href="4_1/index.html">Building "LookStuffUp": A Deep Dive</a></h3>
+                         </div>
+                         <div class="blog-post-format">
+                              <span><a href="#"><img src="images/author.jpeg" class="img-responsive img-circle"> Vibhor Singh</a></span>
+                              <span><i class="fa fa-date"></i> October 26, 2023</span>
+                         </div>
+                         <div class="blog-post-des">
+                              <p>A deep dive into the technical decisions and challenges behind building a browser extension for on-page lookups.</p>
+                              <a href="4_1/index.html" class="btn btn-default">Continue Reading</a>
+                         </div>
+                    </div>
+
+                    <div class="blog-post-thumb">
+                         <div class="blog-post-image">
                               <a href="index.html">
                                    <img src="1_3.png" class="img-responsive" alt="Blog Image">
                               </a>
