--- a/portfolio/4_1/index.html
+++ b/portfolio/4_1/index.html
@@ -159,8 +159,8 @@
 
                <div class="col-md-4 col-md-offset-1 col-sm-6">
                     <h3>Talk to me</h3>
-                    <p><i class="fa fa-globe"></i> San Francisco, CA</p>
-                    <p><i class="fa fa-envelope-o"></i> <a href="mailto:vibhor.singh@nyu.edu">vibhor.singh@nyu.edu</a></p>
+                    <p><i class="fa fa-globe"></i> Winona, MN</p>
+                    <p><i class="fa fa-envelope-o"></i> <a href="mailto:contact@vibhorsingh.com">contact@vibhorsingh.com</a></p>
                </div>
 
                <div class="clearfix col-md-12 col-sm-12">
@@ -170,8 +170,7 @@
                <div class="col-md-12 col-sm-12">
                     <ul class="social-icon">
                          <li><a href="https://github.com/iamvibhorsingh" class="fa fa-github"></a></li>
-                         <li><a href="https://www.linkedin.com/in/vibhorsingh-/" class="fa fa-linkedin"></a></li>
-                         <li><a href="https://twitter.com/iamvibhorsingh" class="fa fa-twitter"></a></li>
+                         <li><a href="https://www.linkedin.com/in/iamvibhorsingh/" class="fa fa-linkedin"></a></li>
                     </ul>
                </div>
                
