add images to gallery

--- a/portfolio/gallery.html
+++ b/portfolio/gallery.html
@@ -268,6 +268,22 @@
                          </div>
                     </div>
 
+                    <div class="col-md-6 col-sm-6">
+                         <div class="gallery-thumb">
+                              <a href="images/25.jpg" class="image-popup">
+                                   <img src="images/19.jpg" class="img-responsive" alt="Gallery Image">
+                              </a>
+                         </div>
+                    </div>
+
+                    <div class="col-md-6 col-sm-6">
+                         <div class="gallery-thumb">
+                              <a href="images/26.jpg" class="image-popup">
+                                   <img src="images/19.jpg" class="img-responsive" alt="Gallery Image">
+                              </a>
+                         </div>
+                    </div>
+
                     <div class="col-md-12 col-sm-12">
                          <p>More to come soon!</p>
                     </div>
