make site changes
sitemap, canonical links, structured data

--- a/portfolio/4_1/index.html
+++ b/portfolio/4_1/index.html
@@ -10,6 +10,24 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 <title>Building "LookStuffUp": A Deep Dive</title>
+<link rel="canonical" href="https://iamvibhorsingh.github.io/portfolio/4_1/index.html" />
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "Building 'LookStuffUp': A Deep Dive into a Side-Project Browser Extension",
+  "name": "Building 'LookStuffUp': A Deep Dive into a Side-Project Browser Extension",
+  "description": "A deep dive into the technical decisions and challenges behind building a browser extension for on-page lookups.",
+  "author": {
+    "@type": "Person",
+    "name": "Vibhor Singh",
+    "url": "https://iamvibhorsingh.github.io"
+  },
+  "datePublished": "2025-07-10",
+  "image": "https://iamvibhorsingh.github.io/portfolio/images/lookstuffup.png"
+}
+</script>
 
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/font-awesome.min.css">
