--- a/portfolio/4_2/index.html
+++ b/portfolio/4_2/index.html
@@ -10,6 +10,24 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 <title>Dev Diary: Building "WhereAreYou?"</title>
+<link rel="canonical" href="https://iamvibhorsingh.github.io/portfolio/4_2/index.html" />
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "Dev Diary: Building 'WhereAreYou?', My Simple GeoGuesser Game",
+  "name": "Dev Diary: Building 'WhereAreYou?', My Simple GeoGuesser Game",
+  "description": "A dev diary about building a simple GeoGuesser-style game with Flask, vanilla JavaScript, and the Google Maps API.",
+  "author": {
+    "@type": "Person",
+    "name": "Vibhor Singh",
+    "url": "https://iamvibhorsingh.github.io"
+  },
+  "datePublished": "2025-07-18",
+  "image": "https://iamvibhorsingh.github.io/portfolio/images/whereareyou.png"
+}
+</script>
 
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/font-awesome.min.css">
@@ -88,7 +106,7 @@
                          <div class="blog-post-des">
                               <p>So, I had this itch to build something fun, a little project that wouldn't take months but would still be a decent technical workout. I've always been a fan of GeoGuesser, and I thought, "How hard could it be to build a simple version of that?" Famous last words, right?</p>
                               <p>The result is "WhereAreYou?", and I wanted to jot down some notes about the journey—the tech I used, the design decisions I made, and the inevitable roadblocks I hit along the way.</p>
-
+                              <p><strong><a href="http://geo.vibhorsingh.com" target="_blank" rel="noopener noreferrer">You can play the game here!</a></strong></p>
                               <h3>The Stack: Keep It Simple, Stupid (KISS)</h3>
                               <p>When you're starting a small project, it's tempting to reach for the latest and greatest tech. But I decided to stick with a simple, robust stack that I knew would get the job done without a lot of ceremony.</p>
                               <ul>
