--- a/portfolio/4_1/index.html
+++ b/portfolio/4_1/index.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 <title>Building "LookStuffUp": A Deep Dive</title>
-<link rel="canonical" href="https://iamvibhorsingh.github.io/portfolio/4_1/index.html" />
+<link rel="canonical" href="https://iamvibhorsingh.github.io/portfolio/4_1/" />
 
 <script type="application/ld+json">
 {
