--- a/index.html
+++ b/index.html
@@ -5,6 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Vibhor Singh.</title>
+    <meta name="description" content="The personal website and portfolio of Vibhor Singh, a software developer specializing in Data, Machine Learning, and Visualization.">
+    <link rel="canonical" href="https://iamvibhorsingh.github.io/" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "WebSite",
+          "url": "https://iamvibhorsingh.github.io/",
+          "name": "Vibhor Singh's Portfolio",
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://iamvibhorsingh.github.io/portfolio/?s={search_term_string}",
+            "query-input": "required name=search_term_string"
+          }
+        },
+        {
+          "@type": "Person",
+          "name": "Vibhor Singh",
+          "url": "https://iamvibhorsingh.github.io/",
+          "jobTitle": "Software Developer",
+          "worksFor": {
+            "@type": "Organization",
+            "name": "Fastenal"
+          },
+          "knowsAbout": ["Data Science", "Machine Learning", "Software Development", "Data Visualization", "Cybersecurity"],
+          "sameAs": [
+            "https://github.com/iamvibhorsingh",
+            "https://www.linkedin.com/in/iamvibhorsingh/"
+          ]
+        }
+      ]
+    }
+    </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
