--- a/index.html
+++ b/index.html
@@ -186,12 +186,22 @@
                 <tr>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a href="https://iamvibhorsingh.github.io/portfolio/resume/Vibhor_Singh_Resume.pdf" class="social" aria-label="Download Vibhor Singh's Resume (PDF)" title="Resume"><i class="fa fa-file"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.4s;"><a href="https://iamvibhorsingh.github.io/portfolio/" class="social" aria-label="View Vibhor Singh's Project Portfolio" title="Portfolio"><i class="fa fa-chart-pie"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.5s;"><a href="https://chromewebstore.google.com/detail/lookstuffup/boagbbfpkdeklbfneiegcdgmfofckhfc" class="social" target="_blank" rel="noopener noreferrer" aria-label="LookStuffUp Chrome Extension by Vibhor Singh" title="Chrome Extension"><i class="fab fa-chrome"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.6s;"><a href="https://github.com/iamvibhorsingh" class="social" aria-label="Vibhor Singh on GitHub" title="GitHub"><i class="fab fa-github"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.8s;"><a href="https://www.linkedin.com/in/iamvibhorsingh/" class="social" aria-label="Vibhor Singh on LinkedIn" title="LinkedIn"><i class="fab fa-linkedin"></i></a></td>
                 </tr>
         </table>
         </nav>
+        <div class="animated fadeIn" style="animation-delay:2.5s; margin-top: 20px; display: flex; gap: 12px; flex-wrap: wrap; justify-content: center;">
+            <button class="btn_one" onclick="window.location.href='https://vibhorsingh.com/supercharged-overpass/'" aria-label="Supercharged Overpass - GeoGuessr Tool" style="background: linear-gradient(135deg, #F59E0B 0%, #DC2626 100%); border: none; padding: 12px 24px; font-size: 16px; cursor: pointer; border-radius: 5px; font-weight: bold;">
+                <i class="fas fa-map-marked-alt" style="margin-right: 8px;"></i>Supercharge your GeoGuessing!
+            </button>
+            <button class="btn_one" onclick="window.open('https://chromewebstore.google.com/detail/lookstuffup/boagbbfpkdeklbfneiegcdgmfofckhfc', '_blank')" aria-label="Get LookStuffUp Chrome Extension" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: none; padding: 12px 24px; font-size: 16px; cursor: pointer; border-radius: 5px; font-weight: bold;">
+                <i class="fab fa-chrome" style="margin-right: 8px;"></i>Get LookStuffUp Extension
+            </button>
+            <button class="btn_one" onclick="window.location.href='https://vibhorsingh.com/boundingbox'" aria-label="BoundingBox Tool - Advanced GIS Tool" style="background: linear-gradient(135deg, #10B981 0%, #059669 100%); border: none; padding: 12px 24px; font-size: 16px; cursor: pointer; border-radius: 5px; font-weight: bold;">
+                <i class="fas fa-draw-polygon" style="margin-right: 8px;"></i>Best BBox Tool on the Web!
+            </button>
+        </div>
     </header>
     <main id="work_container" class="container" role="main" aria-label="Projects and Work">
         <div onclick="closework()" aria-label="Close projects section"><i class="fas fa-angle-right"></i></div>
